# Per-platform confifuration
option('default-netiface', type: 'string',
       value: 'eth0',
       description: 'The default network interface used for manipulating DNS/NTP servers list.')

# Unit tests support
option('tests',
       type: 'feature',
       description: 'Build tests')

option('switchable-eth1-port',
       type: 'boolean', value: false,
       description: 'Add for eth1 port switch feauture')
